# LEDSuite

./: .gitignore  COMMUNICATION-PACKETS.md  README.md  SECURITY.md  ToDo.txt  build.gradle  build.gradle.kts  dependency-reduced-pom.xml  flatpak-sources.json  flatpak_pom.xml  meson.build  meson.options  pom.xml  settings.gradle  settings.gradle.kts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  gradle.yml  main-onPullRequest.yml  main-onPush.yml  main-push.yml  main.yml  update-flatpak-sources.yml
data/: com.toxicstoxm.LEDSuite.desktop.in.in  com.toxicstoxm.ledsuite.appdata.xml  com.toxicstoxm.ledsuite.desktop  meson.build
data/icons/: meson.build
docs/: mkdocs.yaml  site.yaml
docs/docs/: index.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
implementation-concepts/: COMMUNICATION-PACKETS.md  menu_reply_packet_concept.yaml  menu_reply_properties_concept.yaml
po/: POTFILES.in  com.toxicstoxm.LEDSuite.pot  de.po  en.po  it.po  meson.build
scripts/: LEDSuite.sh.in  copy_files.sh  install.sh.in  meson.build
src/main/java/: module-info.java
src/main/java/com/toxicstoxm/LEDSuite/: ClassEntity.java  Constants.java  Entity.java  Human.java  HumanClass.java  LEDSuite.java  Main.java
src/main/java/com/toxicstoxm/LEDSuite/authentication/: AuthManager.java  AuthManagerEndpoint.java  Credentials.java  Permissions.java
src/main/java/com/toxicstoxm/LEDSuite/auto_registration/: AutoRegister.java  AutoRegistrableItem.java  Registrable.java
src/main/java/com/toxicstoxm/LEDSuite/cache/: Cache.java
src/main/java/com/toxicstoxm/LEDSuite/communication/: DeserializationException.java  LEDSuiteSocketComms.java  Serializable.java  WebSocketClient.java  WebSocketClientEndpoint.java  WebSocketCommunication.java
src/main/java/com/toxicstoxm/LEDSuite/cummunication/: LEDSuiteSocketComms.java
src/main/java/com/toxicstoxm/LEDSuite/error_handling/: NullSaveGetter.java
src/main/java/com/toxicstoxm/LEDSuite/event_handling/: EventHandler.java  EventManager.java  Events.java
src/main/java/com/toxicstoxm/LEDSuite/formatting/: StringFormatter.java
src/main/java/com/toxicstoxm/LEDSuite/gettext/: Translations.java
src/main/java/com/toxicstoxm/LEDSuite/logger/: LEDSuiteLogArea.java  LEDSuiteLogAreas.java  LEDSuiteLogLevels.java  LEDSuiteLogger.java  LogArea.java  Logger.java
src/main/java/com/toxicstoxm/LEDSuite/logging/: LogLevel.java  Logger.java
src/main/java/com/toxicstoxm/LEDSuite/network/: LEDSuiteSocketComms.java
src/main/java/com/toxicstoxm/LEDSuite/scheduler/: AlreadyStartedException.java  ExceptionHandler.java  Schedulable.java  SmartRunnable.java  Task.java
src/main/java/com/toxicstoxm/LEDSuite/settings/: CommentPreservation.java  LEDSuiteSettingsBundle.java  LocalSettings.java  ServerSettings.java  Settings.java
src/main/java/com/toxicstoxm/LEDSuite/task_scheduler/: LEDSuiteArgumentProcessor.java  LEDSuiteAsyncTask.java  LEDSuiteFuture.java  LEDSuiteGuiRunnable.java  LEDSuiteProcessor.java  LEDSuiteRunnable.java  LEDSuiteScheduler.java  LEDSuiteTask.java  LEDSuiteWorker.java  SchedulerTask.java  Task.java  TaskScheduler.java
src/main/java/com/toxicstoxm/LEDSuite/time/: Action.java  CooldownManager.java  CooldownManger.java  TickingSystem.java  TimeManager.java
src/main/java/com/toxicstoxm/LEDSuite/tools/: ExceptionTools.java  NullSaveGetter.java  UITools.java  YamlTools.java
src/main/java/com/toxicstoxm/LEDSuite/ui/: AddFileDialog.java  AnimationMenu.java  AnimationRow.java  AnimationRowData.java  DefaultUploadPageEndpoint.java  EndpointProvider.java  HashSumCallable.java  LEDSuiteApplication.java  LEDSuiteWindow.java  MainWindow.java  SettingsDialog.java  StatusDialog.java  UploadPage.java  Window.java  (+3 more)
src/main/java/com/toxicstoxm/lccp/: Constants.java  LCCP.java
src/main/java/com/x_tornado10/: Browser.java  Calculator.java  Main.java
src/main/java/com/x_tornado10/Events/: EventListener.java  EventManager.java
src/main/java/com/x_tornado10/GUI/: Window.java
src/main/java/com/x_tornado10/Logger/: Log_Level.java  Logger.java
src/main/java/com/x_tornado10/Main_Window/: Main_Window.java  Menu_Bar.java
src/main/java/com/x_tornado10/Networking/: FileSender.java
src/main/java/com/x_tornado10/Settings/: Local_Settings.java  Server_Settings.java  Settings.java
src/main/java/com/x_tornado10/Util/: ColorManager.java  Networking.java  Paths.java
src/main/java/com/x_tornado10/Utilities/: ColorManager.java  Networking.java  Paths.java
src/main/java/com/x_tornado10/lccp/: Constants.java  LCCP.java  Paths.java
src/main/java/com/x_tornado10/util/: ColorManager.java  Networking.java  Paths.java
src/main/resources/: Calculator.css  HumanReadableConfig.yaml  LCCP_fr_FR.properties  LEDSuite.gresource.xml  LEDSuite.properties  LEDSuiteWindow.ui  LEDSuite_de_DE.properties  LEDSuite_en_US.properties  LEDSuite_it_IT.properties  ToDo  com.toxicstoxm.LEDSuite.metainfo.xml  com.toxicstoxm.LEDSuite.metainfo.xml.in.in  config.yaml  meson.build  server_config.yaml  style.css  upload-page.ui  version.properties
src/main/resources/Icons/: gen-logo.sh  setup-logo.sh
src/main/resources/communication-template/: request.yaml
src/main/resources/metadata/: com.toxicstoxm.ledsuite.appdata.xml  com.toxicstoxm.ledsuite.desktop  release-notes.html
src/main/resources/po/: LCCP_en_US.properties
src/main/resources/ui/: AnimationMenu.ui  AnimationRow.ui  AuthenticationDialog.ui  FileCollisionDialog.ui  GeneralAlertDialog.ui  LEDSuiteWindow.ui  OverwriteConfirmationDialog.ui  RenameDialog.ui  SettingsDialog.ui  ShortcutsDialog.ui  StatusDialog.ui  UploadPage.ui
src/test/java/: LCCPTest.java
src/test/java/com/toxicstoxm/LEDSuite/: GeneralTests.java
(+334 files in other folders)
